--- a/Css/style.css
+++ b/Css/style.css
@@ -7,7 +7,7 @@
 .HeaderPart{
 	height: 100vh;
 	width: 100%;
-	background-image: url(Images/BackgroundImage.webp);
+	background-image: url(../Images/BackgroundImage.webp);
 	background-size: cover;
 	background-position: center;
 }
